2008-06-23  Philip Withnall  <philip@tecnocode.co.uk>

	* data/icons/16x16/diary.svg:
	* data/icons/22x22/diary.svg:
	* data/icons/32x32/diary.svg:
	* data/icons/48x48/diary.svg: Add SVG versions of the icon.

2008-06-23  Philip Withnall  <philip@tecnocode.co.uk>

	* src/storage-manager.c: (diary_storage_manager_connect),
	(diary_storage_manager_disconnect): Improve error messages with
	advice on how to fix the problems.

2008-06-23  Philip Withnall  <philip@tecnocode.co.uk>

	* src/interface.c: (diary_create_interface): Remove debug code.

2008-06-23  Philip Withnall  <philip@tecnocode.co.uk>

	* data/diary.ui: Mark some strings as translatable.
	* src/interface.c: (diary_create_interface): Improve the error
	message when the UI can't be loaded.

============ Version 0.3.1

2008-06-22  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS:
	* README:
	* configure.ac: Bump to version 0.3.1.
	* data/Makefile.am: Fix the desktop file.

2008-06-22  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS: Fix a typo.
	* data/diary.ui: Make the search dialogue non-modal.
	* configure.ac:
	* src/interface.c:
	* src/links/file.c:
	* src/main-window.c:
	* src/main.c: (diary_quit_real), (main):
	* src/main.h:
	* src/storage-manager.c: Fix the non-encryption build.

============ Version 0.3

2008-06-20  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS:
	* configure.ac:
	* data/Makefile.am: Bump to version 0.3.

2008-06-20  Philip Withnall  <philip@tecnocode.co.uk>

	* README:
	* configure.ac:
	* data/Makefile.am:
	* data/icons/16x16/Makefile.am:
	* data/icons/22x22/Makefile.am:
	* data/icons/32x32/Makefile.am:
	* data/icons/48x48/Makefile.am:
	* data/icons/Makefile.am: Added new icon by Jakub Szypulka.
	* src/storage-manager.c: (diary_storage_manager_connect): Clarified
	the error message given when both DB files exist.

2008-06-08  Philip Withnall  <philip@tecnocode.co.uk>

	* README: Updated the bug reporting instructions.

2008-06-08  Philip Withnall  <philip@tecnocode.co.uk>
