@@ -25,6 +25,7 @@
 G_BEGIN_DECLS
 
 GtkWidget *diary_create_interface (void);
+void diary_interface_embolden_label (GtkLabel *label);
 void diary_interface_error (const gchar *message, GtkWidget *parent_window);
 void diary_calendar_month_changed_cb (GtkCalendar *calendar, gpointer user_data);
 
