@@ -1,3 +1,7 @@
+2008-07-06  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* en_GB.po: Updated British English translation.
+
 2008-06-27  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Added Spanish translation
